--- a/SportsSideKick/app/src/sportsidekick/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/friend_request_item.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/image_holder"
-        android:layout_toStartOf="@+id/button_friend_clear"
+        android:layout_toStartOf="@+id/deny_button"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true">
         <TextView
