Fixed 0021908: TL - Phone/Tablet - Sign In - Inconsistent text and color of Sign In button

--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login_sing_up.xml
@@ -102,7 +102,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="0.325"
                     android:background="@drawable/gym_bag_button_background"
-                    android:text="@string/login_login"
+                    android:text="@string/sign_in"
                     android:gravity="center"
                     android:textAlignment="center"
                     android:textAllCaps="false"
