--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
@@ -85,7 +85,7 @@
                 android:text="@string/sign_in"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/font_size_19"
                 style="?android:attr/borderlessButtonStyle"/>
 
