--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
@@ -214,7 +214,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/login_login"
+            android:text="@string/sign_in"
             android:textColor="@android:color/black"
             android:textSize="@dimen/font_size_18" />
 
