--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login_sing_up.xml
@@ -126,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/transparent"
-                    android:text="@string/login_login"
+                    android:text="@string/sign_in"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
