--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_video_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_video_login_sing_up.xml
@@ -119,7 +119,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="0.325"
                     android:background="@drawable/gym_bag_button_background"
-                    android:text="@string/login_login"
+                    android:text="@string/sign_in"
                     android:gravity="center"
                     android:textAlignment="center"
                     android:textAllCaps="false"
