--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_statistics.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_statistics.xml
@@ -26,6 +26,7 @@
         android:layout_width="@dimen/width_35"
         android:layout_height="@dimen/width_35"
         android:layout_margin="@dimen/margin_5"
+        android:visibility="invisible"
         android:background="@drawable/ic_share"
         android:layout_toStartOf="@+id/pin_button"
         android:layout_alignParentTop="true"/>
