--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_club_radio.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,8 +12,9 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
+        android:visibility="gone"
         android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        app:indicatorName="LineSpinFadeLoaderIndicator"/>
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
@@ -25,7 +27,7 @@
             android:layout_marginBottom="16dp"
             android:visibility="invisible"
             app:layout_aspectRatio="178%"
-            app:layout_widthPercent="100%" />
+            app:layout_widthPercent="100%"/>
     </android.support.percent.PercentRelativeLayout>
     <!--  /\/\/\/\/\/\/\ -->
 
@@ -33,8 +35,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_alignTop="@+id/video_player_dummy_container"
-        android:layout_alignBottom="@+id/video_player_dummy_container"
         android:layout_height="match_parent"
-       />
+
+        />
 </RelativeLayout>
