--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_with_web_view.xml
@@ -52,8 +52,7 @@
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/ic_home"
-                    android:visibility="gone" />
+                    android:src="@drawable/ic_home" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -68,8 +67,8 @@
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/ic_share"
-                    android:visibility="gone" />
+                    android:src="@drawable/ic_pin"
+                    android:clickable="false" />
             </RelativeLayout>
 
             <RelativeLayout
