--- a/SportsSideKick/app/src/sportsidekick/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/message_item_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/margin_5"
@@ -40,9 +41,18 @@
             android:scaleType="centerInside"
             android:src="@drawable/play_button_icon" />
 
-
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/progress_bar"
+            android:layout_width="@dimen/progress_bar_width"
+            android:layout_height="@dimen/progress_bar_height"
+            android:layout_margin="@dimen/margin_10"
+            android:layout_centerInParent="true"
+            android:elevation="@dimen/elevation_2"
+            android:visibility="gone"
+            app:indicatorName="LineSpinFadeLoaderIndicator" />
     </RelativeLayout>
 
+   <!-- Sender info -->
     <TextView
         android:id="@+id/sender"
         android:layout_width="wrap_content"
@@ -75,5 +85,4 @@
         android:alpha="0.5"
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_10" />
-
 </RelativeLayout>
