--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
@@ -117,6 +117,12 @@
                 android:textSize="@dimen/font_size_12" />
 
             <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time_of_match_label" />
+
+            <TextView
                 android:id="@+id/up_next_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -596,6 +602,7 @@
         android:gravity="center"
         android:visibility="gone" />
 
-        <include android:id="@+id/splash" layout="@layout/activity_splash"/>
+        <include android:id="@+id/splash" layout="@layout/activity_splash"
+            android:visibility="gone"/>
 
 </RelativeLayout>
