--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend_item.xml
@@ -56,6 +56,7 @@
             android:text="@string/request_pending"
             android:lines="1"
             android:visibility="gone"
+            android:layout_marginEnd="@dimen/margin_14"
             android:layout_alignParentEnd="true"
             android:maxLines="1"
             android:textColor="@color/white"
