--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
@@ -19,10 +19,11 @@
         android:id="@+id/login_holder"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
+        android:animateLayoutChanges="true"
         android:paddingTop="@dimen/margin_16"
         android:orientation="vertical"
         android:background="@color/login_background"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_height="wrap_content">
 
         <TextView
