--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_add_friend.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/width_500"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_60"
+    android:layout_marginBottom="@dimen/margin_40"
     android:layout_marginEnd="@dimen/margin_90"
     android:layout_marginStart="@dimen/margin_90"
-    android:layout_marginTop="@dimen/margin_60"
+    android:layout_marginTop="@dimen/margin_40"
     android:fitsSystemWindows="true"
     android:background="@drawable/popup_bottom_background"
     android:clickable="true">
@@ -123,6 +123,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/people_recycler_view"
             android:layout_width="match_parent"
+            android:minHeight="@dimen/height_48"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginLeft="@dimen/margin_10"
