--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
@@ -616,7 +616,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/pinned_text"
+                    android:id="@+id/posts_count_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -629,7 +629,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/margin_2"
-                    android:text="@string/pinned"
+                    android:text="@string/posts"
                     android:textAlignment="center"
                     android:textColor="?white" />
 
