--- a/SportsSideKick/app/src/sportsidekick/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/message_item.xml
@@ -49,7 +49,15 @@
             android:scaleType="centerInside"
             android:src="@drawable/play_button_icon" />
 
-
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/progress_bar"
+            android:layout_width="@dimen/progress_bar_width"
+            android:layout_height="@dimen/progress_bar_height"
+            android:layout_margin="@dimen/margin_10"
+            android:layout_centerInParent="true"
+            android:elevation="@dimen/elevation_2"
+            android:visibility="gone"
+            app:indicatorName="LineSpinFadeLoaderIndicator" />
     </RelativeLayout>
 
     <TextView
