--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
@@ -237,7 +237,7 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="Edit"
+                android:text="@string/edit"
                 android:textColor="@color/white" />
 
             <TextView
@@ -252,7 +252,7 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="Delete"
+                android:text="@string/delete"
                 android:textColor="@color/white" />
 
 
@@ -268,7 +268,7 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="Search"
+                android:text="@string/search"
                 android:textColor="@color/white" />
 
         </LinearLayout>
