--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
@@ -184,7 +184,6 @@
                             android:id="@+id/likes_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10"
                             android:textColor="?green_dark_2" />
                     </LinearLayout>
 
@@ -209,7 +208,7 @@
                             android:id="@+id/pin_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="--"
+                            android:text="@string/pin_count_placeholder"
                             android:textColor="?green_dark_2" />
                     </LinearLayout>
 
@@ -234,7 +233,6 @@
                             android:id="@+id/share_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="30"
                             android:textColor="?green_dark_2" />
                     </LinearLayout>
 
@@ -259,7 +257,6 @@
                             android:id="@+id/comments_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="20"
                             android:textColor="?green_dark_2" />
                     </LinearLayout>
 
