--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_friend_profile_fragment.xml
@@ -111,7 +111,7 @@
                 android:layout_below="@id/profile_image_container"
                 android:layout_marginTop="@dimen/margin_negative_19"
                 android:gravity="center"
-                android:text="99"
+                android:text="@string/max_level_value"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
@@ -162,7 +162,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/contact_info_caption"
-                android:text="email@email.com"
                 android:textColor="@color/white" />
 
             <TextView
@@ -171,7 +170,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/contact_info_email"
-                android:text="01234 567 890"
                 android:textColor="@color/white" />
 
             <TextView
@@ -190,7 +188,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/contact_info_caption"
                 android:layout_below="@+id/member_since_caption"
-                android:text="07.12.16"
                 android:textColor="@color/white" />
 
             <TextView
@@ -208,7 +205,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/location_caption"
                 android:layout_below="@+id/location_caption"
-                android:text="Perth, AU"
                 android:textColor="@color/white" />
 
             <TextView
@@ -227,7 +223,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/follows_you_caption"
                 android:layout_below="@+id/follows_you_caption"
-                android:text="Yes"
                 android:textColor="@color/white" />
 
         </RelativeLayout>
@@ -277,7 +272,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="52"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_size_25"
                         android:textStyle="bold" />
@@ -330,7 +324,7 @@
                     android:layout_height="@dimen/popup_your_friends_next_level_cointainer_text_size"
                     android:layout_centerInParent="true"
                     android:gravity="center"
-                    android:text="99"
+                    android:text="@string/max_level_value"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
             </RelativeLayout>
