--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/item_video_chat_slot.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_8"
-        android:text="..."
+        android:text="@string/ellipsis"
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_12"
         app:layout_constraintBottom_toBottomOf="parent"
