--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login.xml
@@ -289,7 +289,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_centerInParent="true"
-                                        android:text="Reset"
+                                        android:text="@string/reset"
                                         android:textColor="@color/colorPrimary"
                                         android:textSize="@dimen/font_size_18"
                                         android:visibility="visible" />
