--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
@@ -469,7 +469,7 @@
                         android:maxLines="1"
                         android:nextFocusDown="@+id/last_name_edit_text"
                         android:nextFocusForward="@+id/last_name_edit_text"
-                        android:text="***********"
+                        android:text="@string/password_placeholder"
                         android:textColor="?white"
                         android:textSize="@dimen/font_size_12"
                         android:padding="@dimen/padding_8"/>
