--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
@@ -104,7 +104,7 @@
             android:padding="@dimen/padding_4"
             android:paddingEnd="@dimen/padding_12"
             android:paddingStart="@dimen/margin_30"
-            android:text="offline"
+            android:text="@string/offline"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="@color/green_dark_4"
@@ -229,7 +229,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:gravity="center"
-            android:text="99"
+            android:text="@string/max_level_value"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/font_size_10"
