--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
@@ -208,7 +208,6 @@
                         android:layout_below="@id/profile_image_container"
                         android:layout_marginTop="@dimen/margin_negative_15"
                         android:gravity="center"
-                        android:text="1"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
 
@@ -364,7 +363,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/password_caption"
                         android:layout_below="@+id/password_caption"
-                        android:text="*******"
+                        android:text="@string/password_placeholder"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_size_12" />
 
@@ -460,7 +459,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="1"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/font_size_25"
                                 android:textStyle="bold" />
@@ -513,7 +511,6 @@
                             android:layout_height="@dimen/popup_your_friends_next_level_cointainer_text_size"
                             android:layout_centerInParent="true"
                             android:gravity="center"
-                            android:text="1"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
                     </RelativeLayout>
