--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
@@ -205,7 +205,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="@dimen/margin_20"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:text="@string/bandles"
+                    android:text="@string/bundles"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_15"
                     android:textStyle="bold" />
@@ -316,7 +316,7 @@
                     android:ellipsize="end"
                     android:lines="1"
                     android:maxLines="1"
-                    android:text="Watch promo"
+                    android:text="@string/watch_promo"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_11" />
 
