--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
@@ -412,8 +412,8 @@
                    android:layout_height="@dimen/activity_lounge_user_profile_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/padding_8"
-                   android:layout_marginLeft="@dimen/padding_8"
-                   android:layout_marginRight="@dimen/padding_8"
+                   android:layout_marginStart="@dimen/padding_8"
+                   android:layout_marginEnd="@dimen/padding_8"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image"
                    android:padding="@dimen/padding_2"
@@ -468,8 +468,8 @@
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_marginLeft="@dimen/margin_5"
-               android:layout_marginRight="@dimen/margin_5"
+               android:layout_marginStart="@dimen/margin_5"
+               android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:ellipsize="end"
                android:gravity="center"
@@ -492,8 +492,8 @@
                android:layout_height="@dimen/profile_coin_height"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/coin_bottom_margin"
-               android:layout_marginLeft="@dimen/coin_lateral_margin"
-               android:layout_marginRight="@dimen/coin_lateral_margin"
+               android:layout_marginStart="@dimen/coin_lateral_margin"
+               android:layout_marginEnd="@dimen/coin_lateral_margin"
                android:adjustViewBounds="true"
                android:src="?userCoinIcon"
                android:layout_below="@+id/profile_name" />
@@ -540,8 +540,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_10"
-                android:layout_marginLeft="@dimen/margin_20"
-                android:layout_marginRight="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_20"
                 android:layout_weight="0.5"
                 android:adjustViewBounds="true"
@@ -553,8 +553,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_20"
-                android:layout_marginLeft="@dimen/margin_20"
-                android:layout_marginRight="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_20"
                 android:layout_weight="0.5"
                 android:adjustViewBounds="true"
                 android:onClick="onFollowersButtonClick"
