--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_account_creating.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_account_creating.xml
@@ -12,8 +12,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,8 +45,8 @@
         android:layout_height="@dimen/height_80"
         android:layout_gravity="center"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/scp_white_logo"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,8 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginTop="8dp"
         android:text="@string/login_slider_text_1_phone"
         android:textColor="?white"
@@ -80,8 +80,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -98,8 +98,8 @@
         android:layout_height="@dimen/height_50"
         android:layout_centerInParent="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:elevation="@dimen/elevation_2"
         app:indicatorColor="@color/create_account_indicator"
@@ -115,8 +115,8 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/standard_button_height"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="8dp"
         android:layout_weight="0.325"
         android:background="@drawable/gym_bag_button_background"
