--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_chat_search_expandable_parent.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_chat_search_expandable_parent.xml
@@ -67,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/row_last_chat_time"
+                    android:layout_toStartOf="@+id/row_last_chat_time"
                     android:text="@string/last_chat"
                     android:textColor="?colorPrimaryLight"
                     android:textSize="@dimen/font_size_12" />
