--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
@@ -70,8 +70,8 @@
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginRight="@dimen/margin_10"
+                        android:layout_marginStart="@dimen/margin_10"
+                        android:layout_marginEnd="@dimen/margin_10"
                         android:layout_marginTop="@dimen/margin_10"
                         android:ellipsize="end"
                         android:maxLines="1"
@@ -85,8 +85,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/title"
                         android:layout_marginBottom="@dimen/margin_10"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginRight="@dimen/margin_10"
+                        android:layout_marginStart="@dimen/margin_10"
+                        android:layout_marginEnd="@dimen/margin_10"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:textColor="?lightGrey"
