--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_new_call.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_new_call.xml
@@ -64,8 +64,8 @@
             android:clipToPadding="false"
             android:layout_height="match_parent"
             android:layout_below="@id/title"
-            android:layout_marginLeft="@dimen/margin_20"
-            android:layout_marginRight="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginEnd="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_15"/>
 
         <TextView
