--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -274,8 +274,8 @@
                             android:layout_height="@dimen/activity_lounge_user_profile_size"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="@dimen/padding_8"
-                            android:layout_marginLeft="@dimen/padding_8"
-                            android:layout_marginRight="@dimen/padding_8"
+                            android:layout_marginStart="@dimen/padding_8"
+                            android:layout_marginEnd="@dimen/padding_8"
                             android:adjustViewBounds="true"
                             android:contentDescription="@string/image"
                             android:padding="@dimen/padding_2"
