--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
@@ -193,7 +193,7 @@
             android:id="@+id/chat_menu_dots"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/height_1"
+            android:layout_marginStart="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@null"
@@ -391,8 +391,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="@dimen/margin_40"
-            android:layout_marginRight="@dimen/margin_40">
+            android:layout_marginStart="@dimen/margin_40"
+            android:layout_marginEnd="@dimen/margin_40">
 
             <ImageView
                 android:id="@+id/logo"
