--- a/SportsSideKick/app/src/sportsidekick/res/layout/news_list_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/news_list_item.xml
@@ -37,8 +37,8 @@
             android:textSize="@dimen/font_size_10"
             android:maxLines="1"
             android:paddingBottom="@dimen/margin_5"
-            android:paddingLeft="@dimen/margin_5"
-            android:paddingRight="@dimen/margin_5" />
+            android:paddingStart="@dimen/margin_5"
+            android:paddingEnd="@dimen/margin_5" />
     </RelativeLayout>
 
 
