--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
@@ -158,7 +158,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="@dimen/margin_15"
-                        android:layout_toLeftOf="@+id/profile_image"
+                        android:layout_toStartOf="@+id/profile_image"
                         android:text="@string/edit_photo"
                         android:textColor="?white" />
 
