--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login_sing_up.xml
@@ -63,8 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/margin_30"
-            android:layout_marginRight="@dimen/margin_30"
+            android:layout_marginStart="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_30"
             android:orientation="vertical">
 
             <ImageView
