--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
@@ -113,7 +113,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="@+id/guideline"
             app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-            android:layout_marginLeft="11dp" />
+            android:layout_marginStart="11dp" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -526,7 +526,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/friends_community"
-            android:layout_toLeftOf="@+id/left_scroll" />
+            android:layout_toStartOf="@+id/left_scroll" />
 
         <ImageView
             android:id="@+id/left_scroll"
@@ -574,7 +574,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/all_friends_recycler_view"
-            android:layout_toLeftOf="@+id/left_scroll_chat"
+            android:layout_toStartOf="@+id/left_scroll_chat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/public_chat_text" />
