--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_you_following.xml
@@ -99,8 +99,8 @@
             android:id="@+id/following_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/margin_20"
-            android:layout_marginRight="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginEnd="@dimen/margin_20"
             android:layout_marginBottom="@dimen/margin_20"/>
 
     </RelativeLayout>
