--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
@@ -169,8 +169,8 @@
             android:id="@+id/friends_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_10"
             android:clipToPadding="false"
             android:numColumns="auto_fit" />
